spring-cloud, 1st iteration